--- a/_posts/2021-03-20-R-3D-Tip.md
+++ b/_posts/2021-03-20-R-3D-Tip.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: R Tip of The Week: Viewing 3D Plots
+title: R Tip of The Week
+subtitle: Viewing 3D Plots
 tags: [R, how-to, R-tips, code]
 ---
 
