--- a/_posts/2021-06-23-R-likert.md
+++ b/_posts/2021-06-23-R-likert.md
@@ -1,10 +1,14 @@
 ---
 layout: post
 title: On Likert Scales In R
+gh-repo: JakeC007/likert-R-examples
+gh-badge: [star, fork, follow]
 tags: [R, how-to, R-tips, code]
 ---
 
-Diverging and 100% stacked bar charts are an effective way to visualize Likert Scale data. In R there are two main packages -- [*HH*](https://cran.r-project.org/web/packages/HH/index.html) and [*likert*](https://cran.r-project.org/web/packages/likert/index.html) -- that turn Likert Scale data into pretty charts. I have used both extensively to make pretty plots and, personally, I like the *likert* package more because it works with `ggplot` objects and functions but I will run through a quick tutorial of both here. 
+UPDATE: It seems that GitHub pages is less than pleased with my liberal use of formatting in this lengthy blog post. To view this guide in it's intended form please check out the [pdf version here.](../assets/files/2021-06-23-R-likert.pdf)
+
+Diverging and 100% stacked bar charts are an effective way to visualize Likert Scale data. In R there are two main packages -- [*HH*](https://cran.r-project.org/web/packages/HH/index.html) and [*likert*](https://cran.r-project.org/web/packages/likert/index.html) -- that turn Likert Scale data into pretty charts. I have used both extensively to make pretty plots and, personally, I like the *likert* package more because it works with *ggplot* objects and functions but I will run through a quick tutorial of both here. 
 
 ### *HH* Package
 
