--- a/_posts/2021-06-23-R-likert.md
+++ b/_posts/2021-06-23-R-likert.md
@@ -8,21 +8,208 @@ tags: [R, how-to, R-tips, code]
 
 UPDATE: It seems that GitHub pages is less than pleased with my liberal use of formatting in this lengthy blog post. To view this guide in it's intended form please check out the [pdf version here.](../assets/files/2021-06-23-R-likert.pdf)
 
+
+
 Diverging and 100% stacked bar charts are an effective way to visualize Likert Scale data. In R there are two main packages -- [*HH*](https://cran.r-project.org/web/packages/HH/index.html) and [*likert*](https://cran.r-project.org/web/packages/likert/index.html) -- that turn Likert Scale data into pretty charts. I have used both extensively to make pretty plots and, personally, I like the *likert* package more because it works with *ggplot* objects and functions but I will run through a quick tutorial of both here. 
 
 [Please click here to see the associated repo that contains all of the code and data needed to run these examples.](https://github.com/JakeC007/likert-R-examples) 
+
+
 
 ### *HH* Package
 
 #### Preparing Your Data
 
-What you now know about HH
+The *HH* package will only accept data in a summary table. With this option for data input, you must have a data frame that represents the Likert data in a pre-summarized form. Meaning, that the first column must be the items and the remaining columns are the levels for each item in an ordinal sequence. 
 
-* Must use a summary table for :( 
-* Create a column for the legend 
-* Custom colors 
-* how to save 
-  * need to use png()
+
+
+I have elected to create my own summary table instead of summarizing existing long format data. However, **be aware that the *HH* package overloads tidyverse's `select()` function.** An easy fix for this is to specify the library via `dplyr::select()`.
+
+
+
+Below is a sample summary table that I created. The `Neutral` column is omitted because it's just a vector of zeros.
+
+| Item                                        | Strongly Disagree | Disagree | Agree | Strongly Agree |
+| ------------------------------------------- | ----------------- | -------- | ----- | -------------- |
+| "Oatmeal Raisin is The Best Type of Cookie" | 0.6               | 0.07     | 0.03  | 0.3            |
+| "Chocolate Chip is The Best Type of Cookie" | 0.2               | 0.25     | 0.15  | 0.4            |
+| "Snickerdoodle is The Best Type of Cookie"  | 0.1               | 0.47     | 0.38  | 0.05           |
+
+It doesn't matter what you name the first column. I named it `Item` to make the dataset play well with the *likert* package as well. 
+
+
+
+To graph the data simply use the `likert()` function:
+
+> `likert(Item~., df, arg3,...)`
+
+Where the `Item` is the column with the questions and the `.` means to sum each of the other columns for the graph. In fact `Item~.` is the same as typing `Item~Strong_Disagree+Disagree+neutral+Agree+Strong_Agree`. The argument `df` is the data frame you want to pull data from and `arg3` is a stand in for all the optional arguments you can add.
+
+A simple graph would look like the following:
+
+```R
+load(file = "../data/sample-likert-data.rda") #our data, see likert-data-generation.Rmd for more info
+likert(Item~., cookie_data, ReferenceZero=3,  ylab = "Question", main = list("Cookie Data", x=unit(.62, "npc")), auto.key = list(columns = 2, reverse.rows = T))
+```
+
+![](..\assets\img\likert\HH_basic.png)
+
+Note how I set the `ReferenceZero` to 3. This is because there are five levels in this graph ranging from "Strong Disagree" to "Strong Agree." Hence, the neutral is the third level (counting here, like in all of R, starts at 1). The `auto.key` argument is covered in the section entitled *Change Your Viz Via  `likert()` Arguments* and the remaining optional arguments are to label the graph. The `main` argument is the title and accepts just a string for the title. However, if you want to center the title you need to use `list("GRAPH TITLE",x=unit(.7, "npc"))`. Where the `x` argument dictates where on the x-axis your title is placed. The domain is between [0,1).
+
+
+
+#### Saving Your Graph
+
+To save a graph created in the *HH* package you need to use functions such as `png()` . You can read the [documentation for yourself here.](https://www.rdocumentation.org/packages/grDevices/versions/3.4.1/topics/png) Below is how I save images created via the *HH* package.
+
+```R
+p1 <- likert(Item~., cookie_data, ReferenceZero=3,  ylab = "Question", main = list("Cookie Data", x=unit(.62, "npc")), auto.key = list(columns = 2, reverse.rows = T))
+
+p1 #show image
+
+## Save Image
+png("../imgs/HH_basic.png",
+     height=720, width=1080)
+p1 
+dev.off()
+```
+
+Note that `png` defaults to unit of pixels. If you wanted to use inches you would do the following:
+
+```
+png("../imgs/HH_basic_in.png",
+     height=5, width=7, units = "in", res = 720)
+```
+
+When using inches you need to specify the resolution via `res`.
+
+
+
+#### Changing How Data Is Displayed
+
+We can group data via:
+
+> `likert(Item~. |grouping, df)`
+
+
+
+Working with our cookie data frame, we can group the cookies via "Chunky" and "Smooth." We reflect this in our data by creating a vector that categorizes each cookie type as smooth or chunky and then using `cbind` to add this vector to the existing data frame.
+
+```R
+## Create New df with Groups
+type <- c("Chunky", "Chunky", "Smooth")
+new_cookie_data <- cbind(cookie_data, type)
+```
+
+Our new data frame (with `Neutral` omitted) looks like this:
+
+| Item                                        | Strongly Disagree | Disagree | Agree | Strongly Agree | type     |
+| ------------------------------------------- | ----------------- | -------- | ----- | -------------- | -------- |
+| "Oatmeal Raisin is The Best Type of Cookie" | 0.6               | 0.07     | 0.03  | 0.3            | "Chunky" |
+| "Chocolate Chip is The Best Type of Cookie" | 0.2               | 0.25     | 0.15  | 0.4            | "Chunky" |
+| "Snickerdoodle is The Best Type of Cookie"  | 0.1               | 0.47     | 0.38  | 0.05           | "Smooth" |
+
+We then use the following code to plot the new data frame:
+
+```R
+## Plot Data
+likert(Item~. | type, new_cookie_data, ReferenceZero=3, main = list("Cookie Data Grouped By Texture Of Cookie", x=unit(.6, "npc")), layout=c(1,2), auto.key = list(columns = 2, reverse.rows = T),
+ scales=list(y=list(relation="free")), between=list(y=1), strip.left=TRUE, strip = FALSE,
+ par.strip.text=list(cex=1.1, lines=2), ylab="Question")
+```
+
+![](..\assets\img\likert\HH_grouped.png)
+
+There is a lot going on in the above code snippet. The following arguments are covered in the next section:
+
+* `layout` 
+* `between`
+* `strip.left` 
+* `strip`
+* `auto.key`
+
+This just leaves us with ` scales=list(y=list(relation="free"))` as the only new parameter related to displaying grouping data. A few things are nested within the `scales` argument; the gist is that `scales` expects its data packaged in multi-dimensional vector form and `list` does that without adding to much extra visual clutter. Within that, we want to set the y-axis scale to "free" so that each of the panels in the graph only contain scale elements for the data that they display. 
+
+
+
+#### Change Your Viz Via  `likert()` Arguments
+
+##### Color
+
+To change what colors are used on the graph use the following argument:
+
+> `col=c("level 1","level 2,...,"level n")`
+
+Where each color corresponds to the levels in ordinal order from the top row of your summarized data frame. To generate your color pallets, use the diverging pallets in the *RColorBrewer* package. If you are new to the package [I highly recommend checking that out here.](https://www.datanovia.com/en/blog/the-a-z-of-rcolorbrewer-palette/) With the *RColorBrewer* package, the vector is supplied for you. Thus to change the colors on your graph all you need is:  
+
+> `col = brewer.pal(n,"pName")`
+
+
+
+##### Percentages 
+
+The following argument displays the Likert graph in a percentage
+
+> `as.percent=TRUE`
+
+It also, helpfully, adds the $$n$$ value for each corresponding row of the data.
+
+
+
+##### Legend Shape
+
+The following argument modifies how the legend is displayed
+
+> `auto.key = list(columns = 1, reverse.rows = T)`
+
+Where `columns` is the number of columns you want to see in the legend. `reverse.rows` is a quick way to flip which end of the Likert scale (1 or n) appears at the top of the legend. 
+
+
+
+##### Augmenting How Graphs With Multiple Plots Are Labeled 
+
+By default, the *HH* package will put a label on each of the plots within an image.
+
+The following argument turns *off* the label at the top of each plot:
+
+> `strip = FALSE`
+
+
+
+The following argument turns *on* the label at the left side of each plot:
+
+> `strip.left = TRUE ` 
+
+
+
+The following argument augments how the labels are presented.
+
+> `par.strip.text = list(cex=1.1, lines=2)`
+
+The `cex` argument dictates how large the text is where a value of 1 is normal size. The `lines` argument dictates how many lines there are in the label. Two lines gives a left label a nice buffer. This functionality is built off of the *lattice* package. There are more ways to augment the labels and you can learn more about it [here](https://cran.r-project.org/web/packages/lattice/index.html).
+
+
+
+##### Arranging Plots
+
+The following argument changes how the plots are arranged:
+
+> `layout = c(1,2)`
+
+`layout` expects the format (column, row)
+
+
+
+To change the space between the plots use the following code:
+
+> `between = list(y=1)`
+
+Where `y` changes the space on the y-axis between plots.
+
+
+
+
 
 ### 	*likert* package 
 
@@ -410,6 +597,14 @@ You can also modify the visualization with arguments to the  `plot()` function.
 
 
 ### Links Referenced
+
+#### *HH* Package
+
+* https://cran.r-project.org/web/packages/HH/HH.pdf
+* https://cran.r-project.org/web/packages/HH/HH.pdf
+* https://stat.ethz.ch/R-manual/R-devel/library/lattice/html/strip.default.html
+
+
 
 #### *likert* Package
 
