--- a/_posts/2021-06-23-R-likert.md
+++ b/_posts/2021-06-23-R-likert.md
@@ -53,7 +53,7 @@ load(file = "../data/sample-likert-data.rda") #our data, see likert-data-generat
 likert(Item~., cookie_data, ReferenceZero=3,  ylab = "Question", main = list("Cookie Data", x=unit(.62, "npc")), auto.key = list(columns = 2, reverse.rows = T))
 ```
 
-![](..\assets\img\likert\HH_basic.png)
+![A Likert graph created with the HH package](..\assets\img\likert\HH_basic.png)
 
 Note how I set the `ReferenceZero` to 3. This is because there are five levels in this graph ranging from "Strong Disagree" to "Strong Agree." Hence, the neutral is the third level (counting here, like in all of R, starts at 1). The `auto.key` argument is covered in the section entitled *Change Your Viz Via  `likert()` Arguments* and the remaining optional arguments are to label the graph. The `main` argument is the title and accepts just a string for the title. However, if you want to center the title you need to use `list("GRAPH TITLE",x=unit(.7, "npc"))`. Where the `x` argument dictates where on the x-axis your title is placed. The domain is between [0,1).
 
@@ -119,7 +119,7 @@ likert(Item~. | type, new_cookie_data, ReferenceZero=3, main = list("Cookie Data
  par.strip.text=list(cex=1.1, lines=2), ylab="Question")
 ```
 
-![](..\assets\img\likert\HH_grouped.png)
+![A grouped Likert graph created with the HH package](..\assets\img\likert\HH_grouped.png)
 
 There is a lot going on in the above code snippet. The following arguments are covered in the next section:
 
@@ -265,9 +265,9 @@ Notice here that I rename the variables in the data frame because their names wi
 
 The resulting plots for this code are a slightly prettier version of the basic likert plot as the legend has been moved. You can read more about this in the section entitled *Change Your Viz Via  `plot()` Arguments*.
 
-![](..\assets\img\likert\long_data.png)
+![A Likert graph created with the likert package](..\assets\img\likert\long_data.png)
 
-![](..\assets\img\likert\long_data_grouped.png)
+![A grouped Likert graph created with the likert package](..\assets\img\likert\long_data_grouped.png)
 
 
 
@@ -364,7 +364,7 @@ plot(likert(dh), legend.position="right") +
 
 Note that `n` must be equal to the number of levels in your categorical variable. We use the `breaks` keyword argument to create a one-to-one mapping between the $$n$$ colors and the levels of the categorical variable. Thus, the length of the `breaks` vector must be equal to `n`.   
 
-![](..\assets\img\likert\color_b-r.png)
+![A Likert graph created with the likert package](..\assets\img\likert\color_b-r.png)
 
 ```R
 ## Red-Never, Blue-Always  
@@ -372,7 +372,7 @@ plot(likert(dh), legend.position="right") +
   scale_fill_manual(values = brewer.pal(n=5,"RdYlBu"), breaks = c("Never", "Rarely", "Sometimes", "Often", "Always")) #order and color the likert boxes
 ```
 
-![](..\assets\img\likert\color_r-b.png)
+![A Likert graph created with the likert package](..\assets\img\likert\color_r-b.png)
 
 Before we move onto the next section, observe how the legend's order matches the vector passed into the `breaks` keyword argument. 
 
@@ -395,7 +395,7 @@ plot(likert(dh), legend.position="right") +
   guides(fill = guide_legend(title="Responses", reverse = FALSE)) #to reverse the order in the legend
 ```
 
-![](..\assets\img\likert\guide_r-b.png)
+![A Likert graph created with the likert package](..\assets\img\likert\guide_r-b.png)
 
 ```R
 ## Red-Never, Blue-Always  
@@ -404,7 +404,7 @@ plot(likert(dh), legend.position="right") +
   guides(fill = guide_legend(title="Responses", reverse = TRUE)) #to reverse the order in the legend
 ```
 
-![](..\assets\img\likert\guide_b-r.png)
+![A Likert graph created with the likert package](..\assets\img\likert\guide_b-r.png)
 
 ##### Reversing The Levels On The Graph
 
@@ -424,7 +424,7 @@ plot(likert(dh.reverse), legend.position="right") +
   guides(fill = guide_legend(title="Responses", reverse = TRUE))
 ```
 
-![](..\assets\img\likert\reverse_wrong.png)
+![A Likert graph created with the likert package](..\assets\img\likert\reverse_wrong.png)
 
 Note that the reversed data frame also reversed the order of which the categorical variables are displayed.  The next section will discuss how to reorder the display of the categorical variables.  
 
@@ -449,7 +449,7 @@ plot(likert(dh.reverse), group.order=names(dh), legend.position="right") + #grou
   guides(fill = guide_legend(title="Responses", reverse = TRUE))
 ```
 
-![](..\assets\img\likert\reverse_right.png)
+![A Likert graph created with the likert package](..\assets\img\likert\reverse_right.png)
 
 ##### Changing The Ordering Of The Categorical Variables (Grouped)
 
@@ -474,7 +474,7 @@ plot(likert(dental_hyg[,c(1:3)], grouping = dental_hyg[,4]), plot.percent.low = 
 
 ```
 
-![](..\assets\img\likert\reorder_g1.png)
+![A grouped Likert graph created with the likert package](..\assets\img\likert\reorder_g1.png)
 
 Now let's swap the first and third group so it goes "Floss" first "Mouthwash" last. 
 
@@ -491,7 +491,7 @@ plot(likert(dental_hyg.reorder[,c(1:3)], grouping = dental_hyg.reorder[,4]), plo
   guides(fill = guide_legend(title="Responses", reverse = TRUE))
 ```
 
-![](..\assets\img\likert\reorder_g2.png)
+![A grouped Likert graph created with the likert package](..\assets\img\likert\reorder_g2.png)
 
 As desired, the groups switched.
 
@@ -518,7 +518,7 @@ plot(likert(dental_hyg[,c(1:3)], grouping = dental_hyg.reverse[,4]), plot.percen
   guides(fill = guide_legend(title="Responses", reverse = TRUE))
 ```
 
-![](..\assets\img\likert\reorder_g3.png)
+![A grouped Likert graph created with the likert package](..\assets\img\likert\reorder_g3.png)
 
 Now the ordering is "Child", "Teen", "Adult" instead of "Adult" , "Teen", "Child".
 
@@ -528,13 +528,13 @@ This technique can be generalized to reordering instead of reversing if you simp
 
 There is an [excellent blog post from Datawrapper](https://blog.datawrapper.de/divergingbars/) making the case against diverging stacked bar charts and offering 100% stacked bar charts as the better alternative. The article argues that “the main problem with diverging bars, however, is comparability.”  On the whole I agree; in the case that there are two or four levels on the Likert scale, however, I think the diverging stacked bar chart is the better choice.[^1]   As you can see, the image below on the right is better for easy comparison than the image on the left.
 
-|                Incorrect                 |                 Correct                  |
-| :--------------------------------------: | :--------------------------------------: |
-| ![](..\assets\img\likert\reorder_g1.png) | ![](..\assets\img\likert\diverge_no.png) |
+|                          Incorrect                           |                           Correct                            |
+| :----------------------------------------------------------: | :----------------------------------------------------------: |
+| ![A grouped diverging Likert graph created with the likert package](..\assets\img\likert\reorder_g1.png) | ![A grouped 100% complete Likert graph created with the likert package](..\assets\img\likert\diverge_no.png) |
 
 Moreover, the diverging Likert scale below is also acceptable as there is an even number of levels.
 
-![](..\assets\img\likert\no_center_diverge.png)
+![A grouped Likert graph created with the likert package](..\assets\img\likert\no_center_diverge.png)
 
 
 
