--- a/_posts/2025-07-12-PETS-2025.md
+++ b/_posts/2025-07-12-PETS-2025.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: Automating Privacy Policy Analysis: Insights from Our Multi-Year Research Project
+title: Automating Privacy Policy Analysis
+subtitle: Insights from Our Multi-Year Research Project
 gh-repo: JakeC007/Automated_GKC-CI_Privacy_Policy_Annotations
 gh-badge: [star, fork, follow]
 ---
