reproducibility for likert

--- a/_posts/2021-06-23-R-likert.md
+++ b/_posts/2021-06-23-R-likert.md
@@ -6,6 +6,8 @@ gh-badge: [star, fork, follow]
 tags: [R, how-to, R-tips, code]
 ---
 
+UPDATE – June 2025: Some of the underlying packages have changed, and this guide no longer works out of the box. If you’d like to run the original code, see [this post](https://jakec007.github.io/2025-06-01-R-likert-env/) (or the [README](https://github.com/JakeC007/likert-R-examples/blob/main/README.md) in the repo) for instructions on how to recreate the older package environment. TLDR: use `renv` and run `renv::restore()`.
+
 UPDATE: It seems that GitHub pages is less than pleased with my liberal use of formatting in this lengthy blog post. To view this guide in it's intended form please check out the [pdf version here.](../assets/files/2021-06-23-R-likert.pdf)
 
 
